<resources>
    <string name="app_name">Food Order</string>

    //menu item
    <string name="item_home">Home</string>
    <string name="item_cart">Giỏ Hàng</string>
    <string name="item_fedback">Phản Hồi</string>
    <string name="item_contact">Liên hệ</string>
    <string name="item_history">Lịch sử</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="user_name">User name</string>
    <string name="Staff_name">Staff name</string>
    <string name="order_details">Chi tiết đơn hàng</string>
    <string name="_0_vnd">0 VND</string>
    <string name="payment_methods">Phương thức thanh toán</string>
    <string name="cash">Tiền mặt</string>
    <string name="first_and_last_name">Họ và tên (*)</string>
    <string name="first_and_last_name_2">Họ và tên:</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="phone_number_2">Số điện thoại:</string>
    <string name="delivery_address">Địa chỉ giao hàng</string>
    <string name="delivery_address_2">Địa chỉ nhận hàng:</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="order_cart">Đặt hàng</string>
    <string name="facebook">Facebook</string>
    <string name="hotline">Phone</string>
    <string name="gmail">Mail</string>
    <string name="youtube">Youtube</string>
    <string name="dish_menu">Thực đơn:</string>
    <string name="order_date">Ngày đặt hàng:</string>
    <string name="total_price">Tổng tiền:</string>
    <string name="total_price_2">Tổng tiền</string>
    <string name="payment">Thanh toán:</string>
    <string name="zalo">Zalo</string>
    <string name="feedback">Phản hồi (*)</string>
    <string name="send_feedback">Gửi phản hồi</string>
    <string name="rate_us">Đánh giá</string>
    <string name="send_rating_star">Gửi đánh giá</string>
    <string name="order">Đặt Hàng</string>
    <string name="history_order_id">Mã đơn hàng:</string>
    <string name="logout">Đăng xuất</string>
    <string name="add_to_cart">Thêm Vào Giỏ Hàng</string>
    <string name="menu_order">Thực đơn</string>
    <string name="about_us_title">CÔNG TY CỔ PHẦN TẬP ĐOÀN TAM TẤU</string>
    <string name="managements">Managements</string>
    <string name="tong_anh_tuan_ceo">Tống Anh Tuấn (CEO)</string>
    <string name="tran_nguyen_duc_nam">Trần Nguyễn Đức Nam</string>
    <string name="about_us_info_1">Số 1 Quang Trung, Hoàn Kiếm, Hà Nội</string>
    <string name="about_us_info_2">Điện thoại: +84. 24 3767 5168</string>
    <string name="about_us_info_3">Email: info@tamtau.vn</string>
    <string name="nguyen_chi_quyen">Nguyễn Chí Quyền</string>

    <string name="about_member_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="about_member_2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="about_member_3">Duis aute irure dolor
                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>

    <string name="about_member_4">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                    consequat.</string>

    <string name="detail_food">Excepteur sint
                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                    consectetur adipiscing elita.</string>
    <string name="about">About</string>
    <string name="contact_to_us">Liên hệ với chúng tôi</string>
    <string name="address">Address</string>
    <string name="add_to_cart_food_details">Thêm Vào Giỏ Hàng</string>
    <string name="rate_our_service">Rate our service</string>

</resources>