<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_cart"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/define_dimen_100"
            app:strokeColor="@color/light_blue_2"
            android:elevation="@dimen/define_dimen_8"
            app:cardElevation="@dimen/define_dimen_4"
            android:layout_margin="@dimen/define_dimen_4">

            <ImageButton
                android:id="@+id/tv_cancel_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:src="@drawable/arrow_back"
                android:textSize="16sp" />
        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/order_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_details"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:elevation="@dimen/define_dimen_2"
        app:cardCornerRadius="@dimen/define_dimen_20"
        app:cardElevation="@dimen/define_dimen_4"
        app:strokeColor="@color/light_blue_2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_menu_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:background="@drawable/edt_food_order_menu"
                android:fontFamily="@font/roboto_mono_bold"
                android:gravity="center"
                android:padding="@dimen/define_dimen_6"
                android:text="@string/menu_order"
                android:textColor="@color/white"
                android:textSize="@dimen/define_dimen_16" />

            <TextView
                android:id="@+id/food_order_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_menu_order"
                android:background="@drawable/edt_food_order_details"
                android:padding="@dimen/define_dimen_6"
                android:textSize="14sp" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/payment_methods"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/payment_method_spn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/txtv_bg"
        android:padding="12dp"
        android:text="@string/cash" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/first_and_last_name"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/order_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edt_bg"
        android:imeOptions="actionNext"
        android:padding="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/phone_number"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/order_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edt_bg"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:padding="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/delivery_address"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/order_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edt_bg"
        android:imeOptions="actionDone"
        android:padding="12dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_18"
        android:layout_marginBottom="@dimen/define_dimen_18">

        <TextView
            android:layout_width="@dimen/define_dimen_200"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/define_dimen_4"
            android:text="@string/total_price_2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/define_dimen_4"
            android:text="@string/_0_vnd"
            android:textColor="@color/red"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_create_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edt_order_cart_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/order_cart"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>