<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:elevation="10dp"
    app:cardCornerRadius="18dp"
    app:cardElevation="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_order_id"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/history_order_id"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/htr_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/label_order_id"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/label_order_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/first_and_last_name_2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/htr_order_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/label_order_name"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/label_order_phone"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/phone_number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/htr_order_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/label_order_phone"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/label_order_address"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/delivery_address_2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/htr_order_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/label_order_address"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/label_order_dish"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/dish_menu"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/htr_order_dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/label_order_dish"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/label_order_date"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/order_date"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/htr_order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/label_order_date"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/dark_blue" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/label_order_price"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/total_price"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/htr_order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/label_order_price"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/label_order_pay"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/payment"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/htr_order_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/label_order_pay"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>