<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragment.FeedbackFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/feedback_background_2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/define_dimen_200"
                android:src="@drawable/feedback_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/define_dimen_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_and_last_name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/feedback_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edt_bg"
                    android:imeOptions="actionNext"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/feedback_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edt_bg"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/feedback_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edt_bg"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/feedback"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/feedback_comment"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edt_bg"
                    android:gravity="start"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:maxLength="1000"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/define_dimen_14">

                    <TextView
                        android:id="@+id/tv_rate_us"
                        android:layout_width="@dimen/define_dimen_160"
                        android:layout_height="42dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/edt_order_cart_bg"
                        android:gravity="center"
                        android:text="@string/rate_us"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_send_feedback"
                        android:layout_width="@dimen/define_dimen_160"
                        android:layout_height="42dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/edt_order_cart_bg"
                        android:gravity="center"
                        android:text="@string/send_feedback"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>